5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1671_1107.log
== TEST (2019-04-25 21:24:00) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje"))
diafuturo = int(input("Entre com o numero de dias apos hoje"))

if (diadasemana==0) and (diafuturo>7):
	print("")
	



-- OUTPUT:
420.0 extras e 20.0 de falta
R$  500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:40:17) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje"))
diafuturo = int(input("Entre com o numero de dias apos hoje"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

	
	



-- OUTPUT:
420.0 extras e 20.0 de falta
R$  500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:41:07) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje"))
diafuturo = int(input("Entre com o numero de dias apos hoje"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6):
		print("o dia futuro eh domingo")
	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:41:19) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6):
		print("o dia futuro eh domingo")
	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:45:35) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo % 0):
	print("o dia futuro eh domingo")
elif (diafuturo % 1):
	print("o dia futuro eh segunda")
elif (diafuturo % 2):
	print("o dia futuro eh terca")
elif (diafuturo % 3):
	print("o dia futuro eh quarta")
elif (diafuturo % 4):
	print("o dia futuro eh quinta")
elif (diafuturo % 5):
	print("o dia futuro eh sexta")
elif (diafuturo % 6):
	print("o dia futuro eh sabado")
	




	   



	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diafuturo % 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:46:06) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo % 6):
	print("o dia futuro eh domingo")
elif (diafuturo % 1):
	print("o dia futuro eh segunda")
elif (diafuturo % 2):
	print("o dia futuro eh terca")
elif (diafuturo % 3):
	print("o dia futuro eh quarta")
elif (diafuturo % 4):
	print("o dia futuro eh quinta")
elif (diafuturo % 5):
	print("o dia futuro eh sexta")
elif (diafuturo % 6):
	print("o dia futuro eh sabado")
	




	   



	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:46:15) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo % 6):
	print("o dia futuro eh domingo")
elif (diafuturo % 1):
	print("o dia futuro eh segunda")
elif (diafuturo % 2):
	print("o dia futuro eh terca")
elif (diafuturo % 3):
	print("o dia futuro eh quarta")
elif (diafuturo % 4):
	print("o dia futuro eh quinta")
elif (diafuturo % 5):
	print("o dia futuro eh sexta")
elif (diafuturo % 6):
	print("o dia futuro eh sabado")
	




	   



	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:46:36) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6):
	print("o dia futuro eh domingo")
elif (diafuturo % 1):
	print("o dia futuro eh segunda")
elif (diafuturo % 2):
	print("o dia futuro eh terca")
elif (diafuturo % 3):
	print("o dia futuro eh quarta")
elif (diafuturo % 4):
	print("o dia futuro eh quinta")
elif (diafuturo % 5):
	print("o dia futuro eh sexta")
elif (diafuturo % 6):
	print("o dia futuro eh sabado")
	




	   



	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:49:18) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6 ):
	print("o dia futuro eh domingo")
elif (diadasemana % 5):
	print("o dia futuro eh segunda")
elif (diadasemana % 4):
	print("o dia futuro eh terca")
elif (diadasemana % ):
	print("o dia futuro eh quarta")
elif (diadasemana % 3):
	print("o dia futuro eh quinta")
	
	



	   



	



-- ERROR:
File "XXXX", line 25
    elif (diadasemana % ):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:49:26) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6 ):
	print("o dia futuro eh domingo")
elif (diadasemana % 5):
	print("o dia futuro eh segunda")
elif (diadasemana % 4):
	print("o dia futuro eh terca")
elif (diadasemana % 2):
	print("o dia futuro eh quarta")
elif (diadasemana % 3):
	print("o dia futuro eh quinta")
	
	



	   



	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:49:39) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana % 6 ):
	print("o dia futuro eh domingo")
elif (diadasemana % 5):
	print("o dia futuro eh segunda")
elif (diadasemana % 4):
	print("o dia futuro eh terca")
elif (diadasemana % 2):
	print("o dia futuro eh quarta")
elif (diadasemana % 3):
	print("o dia futuro eh quinta")
	
	



	   



	



-- OUTPUT:
o dia futuro eh domingo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:55:51) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadofuturo/diadasemana % 6 == 0):
	print("O dia futuro eh domingo ")


	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diadofuturo/diadasemana % 6 == 0):
NameError: name 'diadofuturo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:56:15) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana % 6 == 0):
	print("O dia futuro eh domingo ")


	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diadofuturo/diadasemana % 6 == 0):
NameError: name 'diadofuturo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:58:53) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diafuturo/diadasemana % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diafuturo/diadasemana % 6 == 2):
	print("O dia futuro eh terca")




	



-- OUTPUT:
O dia futuro eh segunda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:59:50) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diafuturo/diadasemana % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diafuturo/diadasemana % 6 == 2):
	print("O dia futuro eh terca")
elif (diafuturo/diadasemana % 6 == 3):
	print("O dia futuro eh quarta")
elif (diafuturo/diadasemana % 6 == 4):
	print("O dia futuro eh quinta")
elif (diafuturo/diadasemana % 6 == 5):
	print("O dia futuro eh sexta")
elif (diafuturo/diadasemana % 6 == 6):
	print("O dia futuro eh sabado")


	



-- OUTPUT:
O dia futuro eh segunda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:02:24) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diadasemana/diafuturo % 6 == 1):
	print("O dia futuro eh segunda ")
elif diadasemana/diafuturo(% 6 == 2):
	print("O dia futuro eh terca")
elif ( diadasemana/diafuturo % 6 == 3):
	print("O dia futuro eh quarta")
elif (diadasemana/diafuturo  % 6 == 4):
	print("O dia futuro eh quinta")
elif (diadasemana/diafuturo  % 6 == 5):
	print("O dia futuro eh sexta")
elif (diadasemana/diafuturo % = 6):
	print("O dia futuro eh sabado")


	



-- ERROR:
File "XXXX", line 23
    elif diadasemana/diafuturo(% 6 == 2):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:02:44) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diadasemana/diafuturo % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diadasemana/diafuturo % 6 == 2):
	print("O dia futuro eh terca")
elif ( iadasemana/diafuturo % 6 == 3):
	print("O dia futuro eh quarta")
elif (diadasemana/diafuturo  % 6 == 4):
	print("O dia futuro eh quinta")
elif (diadasemana/diafuturo  % 6 == 5):
	print("O dia futuro eh sexta")
elif (diadasemana/diafuturo % = 6):
	print("O dia futuro eh sabado")


	



-- ERROR:
File "XXXX", line 31
    elif (diadasemana/diafuturo % = 6):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:02:58) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diadasemana/diafuturo % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diadasemana/diafuturo % 6 == 2):
	print("O dia futuro eh terca")
elif ( iadasemana/diafuturo % 6 == 3):
	print("O dia futuro eh quarta")
elif (diadasemana/diafuturo  % 6 == 4):
	print("O dia futuro eh quinta")
elif (diadasemana/diafuturo  % 6 == 5):
	print("O dia futuro eh sexta")
elif (diadasemana/diafuturo % == 6):
	print("O dia futuro eh sabado")


	



-- ERROR:
File "XXXX", line 31
    elif (diadasemana/diafuturo % == 6):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:03:17) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diadasemana/diafuturo % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diadasemana/diafuturo % 6 == 2):
	print("O dia futuro eh terca")
elif ( iadasemana/diafuturo % 6 == 3):
	print("O dia futuro eh quarta")
elif (diadasemana/diafuturo  % 6 == 4):
	print("O dia futuro eh quinta")
elif (diadasemana/diafuturo  % 6 == 5):
	print("O dia futuro eh sexta")
elif (diadasemana/diafuturo % 6 == 6):
	print("O dia futuro eh sabado")


	



-- OUTPUT:
O dia futuro eh segunda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:03:32) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo % 6 == 0):
	print("O dia futuro eh domingo ")
elif (diadasemana/diafuturo % 6 == 1):
	print("O dia futuro eh segunda ")
elif (diadasemana/diafuturo % 6 == 2):
	print("O dia futuro eh terca")
elif (diadasemana/diafuturo % 6 == 3):
	print("O dia futuro eh quarta")
elif (diadasemana/diafuturo  % 6 == 4):
	print("O dia futuro eh quinta")
elif (diadasemana/diafuturo  % 6 == 5):
	print("O dia futuro eh sexta")
elif (diadasemana/diafuturo % 6 == 6):
	print("O dia futuro eh sabado")


	



-- OUTPUT:
O dia futuro eh segunda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:17:18) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadofuturo/diadasemana % 0):
	print("dia do futuro eh segunda")

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diadofuturo/diadasemana % 0):
NameError: name 'diadofuturo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:18:55) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadofuturo/diadasemana % 0):
	print("dia do futuro eh domingo")
elif (diadofuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diadofuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diadofuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diadofuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diadofuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diadofuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diadofuturo/diadasemana % 0):
NameError: name 'diadofuturo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:19:14) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadofuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diadofuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diadofuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diadofuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diadofuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diadofuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diadofuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diadofuturo/diadasemana == 0):
NameError: name 'diadofuturo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:19:42) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:20:34) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:20:48) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:21:09) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana % 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    if (diafuturo/diadasemana % 0):
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:21:23) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:21:33) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diafuturo/diadasemana == 0):
	print("dia do futuro eh domingo")
elif (diafuturo/diadasemana % 1):
	print("dia do futuro eh segunda")
elif (diafuturo/diadasemana % 2):
	print("dia do futuro eh terca")
elif (diafuturo/diadasemana % 3):
	print("dia do futuro eh quarta")
elif (diafuturo/diadasemana % 4):
	print("dia do futuro eh quinta")
elif (diafuturo/diadasemana % 5):
	print("dia do futuro eh sexta")
elif (diafuturo/diadasemana % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:28:32) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0):
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")

if (diadasemana/diafuturo == 0):
	print("dia do futuro eh domingo")
elif (diadasemana/diafuturo % 1):
	print("dia do futuro eh segunda")
elif (diadasemana/diafuturo % 2):
	print("dia do futuro eh terca")
elif (diadasemana/diafuturo % 3):
	print("dia do futuro eh quarta")
elif (diadasemana/diafuturo % 4):
	print("dia do futuro eh quinta")
elif (diadasemana/diafuturo % 5):
	print("dia do futuro eh sexta")
elif (diadasemana/diafuturo % 6):
	print("dia do futuro eh sabado")

	



-- OUTPUT:
dia do futuro eh terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 16:30:36) 
-- CODE:
diadasemana = int(input("Entre com o numero do dia de hoje:"))
diafuturo = int(input("Entre com o numero de dias apos hoje:"))

if (diadasemana==0) 
	print("hoje eh domingo")
elif (diadasemana==1):
	print("hoje eh segunda")
elif (diadasemana==2):
	print("hoje eh terca")
elif (diadasemana==3):
	print("hoje eh quarta")
elif (diadasemana==4):
	print("hoje eh quinta")
elif (diadasemana==5):
	print("hoje eh sexta")
elif (diadasemana==6):
	print("hoje eh sabado")


	



-- ERROR:
File "XXXX", line 4
    if (diadasemana==0) 
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:59:58) 
-- CODE:
d = int(input("Qual o dia? "))

if ((d >= 0 and d <= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domigo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2)
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else:
	print("A entrada",d, "eh invalida")
-- ERROR:
File "XXXX", line 24
    elif (d1 == 2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:13) 
-- CODE:
d = int(input("Qual o dia? "))

if ((d >= 0 and d <= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domigo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else:
	print("A entrada",d, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:01:35) 
-- CODE:
d = int(input("Qual o dia? "))

if ((d >= 0 and d <= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domigo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else:
	print("A entrada",d, "eh invalida")
-- EXECUTION TIME:
0.174896
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
